2003-09-30  Lars Hansen  <larsh@math.ku.dk>

	* desktop.el: A lot of comments updated.
	(desktop-save-mode): Minor mode introduced.
	(desktop-enable, desktop-clear-preserve-buffers): Variables made
	obsolete.
	(desktop-load-default): Function made obsolete.
	(desktop-locals-to-save): Variable made customizable.
	(desktop-read): Optional parameter `dirname' added.
	(desktop-change-dir, desktop-revert): Parameter `dirname' in `desktop-read' used.
	(desktop-save-in-load-dir): Renamed to `desktop-save-in-desktop-dir'.

2003-09-29  Rajesh Vaidheeswarran  <rv@gnu.org>

	* whitespace.el (whitespace-clean-msg): Add user customizable message
	for displaying ``clean'' output.
	(whitespace-buffer): Use `whitespace-clean-msg'.
	(whitespace-global-mode): Fix typo.
	
2003-09-29  Thien-Thi Nguyen  <ttn@gnu.org>

	* pcvs.el (cvs-mode-unmark-up): Move to goal column when done.

2003-09-29  Lute Kamstra  <Lute.Kamstra@cwi.nl>

	* bindings.el (mode-line-modes): Remove superfluous :propertize
	construct in initialization.
	(mode-line-position): Change cons cell into proper list in
	initialization.

2003-09-29  SAITO Takuya <tabmore@rivo.mediatti.net>  (tiny change)

	* international/mule.el (decode-coding-inserted-region): Use car
	of the return value of find-operation-coding-system.

2003-09-29  Kenichi Handa  <handa@m17n.org>

	* descr-text.el (describe-char): Fix previous change.

2003-09-28  Kenichi Handa  <handa@m17n.org>

	* descr-text.el (describe-char-display): New function.
	(describe-char): Pay attention to display table on describing how
	a character is displayed.

	* international/mule-cmds.el (encoded-string-description): Prepend
	"0x" to each encoded byte.

2003-09-28  Andreas Schwab  <schwab@suse.de>

	* find-file.el (ff-special-constructs): Add autoload cookie.

2003-09-28  Kevin Ryde  <user42@zip.com.au>

	* info.el (Info-find-index-name): Remove any "<n>" suffixes which
	makeinfo appends to duplicate index entries.

2003-09-28  Eli Zaretskii  <eliz@elta.co.il>
